fix overflow

--- a/scss/_partial.scss
+++ b/scss/_partial.scss
@@ -23,6 +23,7 @@ body {
 
 #description-text {
 	margin-top: 20px;
+	overflow: auto;
 }
 
 .no-padding {
